// Configuration proto for Kubernetes provider.
//
// Example provider config:
// {
//   pods {}
// }
//
// In probe config:
// probe {
//   targets{
//     rds_targets {
//       resource_path: "k8s://pods"
//       filter {
//         key: "namespace"
//         value: "default"
//       }
//       filter {
//         key: "name"
//         value: "cloudprober.*"
//       }
//     }
//   }
// }
syntax = "proto2";

package cloudprober.rds.kubernetes;

message Pods {}

message Endpoints {}

// Kubernetes provider config.
message ProviderConfig {
  // Namespace to list resources for. If not specified, we default to all
  // namespaces.
  optional string namespace = 1;

  // Pods discovery options. This field should be declared for the pods
  // discovery to be enabled.
  optional Pods pods = 2;

  // Endpoints discovery options. This field should be declared for the
  // endpoints discovery to be enabled.
  optional Endpoints endpoints = 3;

  // How often resources should be evaluated/expanded.
  optional int32 re_eval_sec = 99 [default = 60];  // default 1 min
}
